Cleanup android module